[gd_scene load_steps=9 format=3 uid="uid://cd70efnjseiy8"]

[ext_resource type="Script" uid="uid://cs8nvcnbtholx" path="res://Skript/endszene.gd" id="1_5uwb2"]
[ext_resource type="AudioStream" uid="uid://okjngx47qcer" path="res://Ton/gewonnen.mp3" id="1_p3844"]
[ext_resource type="AudioStream" uid="uid://bygaes4xbp45s" path="res://Ton/verloren.mp3" id="3_gwsax"]

[sub_resource type="Animation" id="Animation_71s7q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MessageLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MessageLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MessageLabel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(568, 328)]
}

[sub_resource type="Animation" id="Animation_7nngk"]
resource_name = "lost_screen"
length = 2.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SoundPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_gwsax")
}],
"times": PackedFloat32Array(0.266667)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MessageLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(4, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MessageLabel:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.920995, 0.920995, 0.920995, 1), Color(0.678431, 0, 0, 1), Color(0.678431, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MessageLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, 180), Vector2(720, 60)]
}

[sub_resource type="Animation" id="Animation_5uwb2"]
resource_name = "show_end_screen"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1.96667, 3.93333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), 0.392157, Color(0.00351917, 0.00351917, 0.00351917, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MessageLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(4, 4)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SoundPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 1.14,
"start_offset": 0.0,
"stream": ExtResource("1_p3844")
}],
"times": PackedFloat32Array(0.0666667)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MessageLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, 180), Vector2(720, 60)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MessageLabel:theme_override_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.920995, 0.920995, 0.920995, 1), Color(0.0705882, 0.788235, 0.207843, 1), Color(0.0705882, 0.788235, 0.207843, 1)]
}

[sub_resource type="Animation" id="Animation_gwsax"]
resource_name = "show_end_screen2"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MessageLabel:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.466667, 1.56667, 2.76667, 3.9, 5.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, Color(1, 0.711922, 0.990889, 1), 1.0, Color(1, 0.711922, 0.990889, 1), 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MessageLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5.16667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(4, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MessageLabel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667, 5.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(568, 328), Vector2(360, 240)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5, 5.16667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), 0.392157, 0.392157]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SoundPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("1_p3844")
}],
"times": PackedFloat32Array(0.166667)
}
tracks/4/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7nngk"]
_data = {
&"RESET": SubResource("Animation_71s7q"),
&"lost_screen": SubResource("Animation_7nngk"),
&"show_end_screen": SubResource("Animation_5uwb2"),
&"show_end_screen2": SubResource("Animation_gwsax")
}

[node name="Endszene" type="CanvasLayer"]
script = ExtResource("1_5uwb2")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00351917, 0.00351917, 0.00351917, 0.392157)

[node name="MessageLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 182.333
offset_top = -248.834
offset_right = 318.333
offset_bottom = -192.834
grow_horizontal = 2
grow_vertical = 2
text = "Level geschafft!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7nngk")
}

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.129
pitch_scale = 0.99
playback_type = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
